--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: "/users/#{@user.id}", local: true  do |f| %>
+<%= form_with url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
   <%= f.label :date %>
   <%= f.text_field :date %>
   <%= f.label :duration %>
