--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -6,7 +6,10 @@
   <%= f.label :start_time %>
   <%= f.text_field :start_time %>
   <%= f.label :movie_id %>
-  <%= f.text_field :movie_id %>
+  <%= f.text_field :movie_id %> <br>
+  <% @users.each do |user| %>
+    <%= f.check_box :user%> <%= user.name %> <br>
+  <% end %>
 
   <%= f.submit %>
 <% end %>
