--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Viewing Party</h1>
 
-<%= button_to 'Create a New User', register_index_path, method: :get %>
+<%= button_to 'Create a New User', new_user_path, method: :get %>
 
 
 <h2>Existing Users</h2>
