--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,1 +1,3 @@
-<h1><%= @movie.title %></h1>
+<h1><#%= @movie.title %></h1>
+<%= button_to 'Discover Page', user_discover_index_path(@user), method: :get %>
+<%= button_to 'New Viewing Party', "users/#{@user.id}/movies/#{@movie.id}/viewing-party/new" %>
