--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -1,12 +1,12 @@
-<%= form_with url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
+<%= form_with model: @movie, url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
   <%= f.label :date %>
   <%= f.text_field :date %>
   <%= f.label :duration %>
   <%= f.text_field :duration %>
   <%= f.label :start_time %>
   <%= f.text_field :start_time %>
-  <%= f.label :movie_id %>
-  <%= f.text_field :movie_id %> <br>
+  <%= f.hidden_field :movie_id, value: @movie %>
+  
   <% @users.each do |user| %>
     <%= f.check_box :user%> <%= user.name %> <br>
   <% end %>
