--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,11 @@
 <h1><%= @movie.title %></h1>
+<h3>Vote Average: </h3><%= @movie.vote_average %>
+<h3>Run Time: </h3><%= @movie.runtime %>
+<h3>Genres: </h3>
+  <% @movie.genres.each do |genre| %>
+    <%= genre %>
+  <% end %>
+<h3>Summary: </h3><%= @movie.overview %>
 
 <%= button_to 'Discover Page', user_discover_index_path(@user), method: :get %>
 <%= button_to 'New Viewing Party', "users/#{@user.id}/movies/#{@movie.id}/viewing-party/new" %>
