--- a/app/views/user_movies/index.html.erb
+++ b/app/views/user_movies/index.html.erb
@@ -1,8 +1,7 @@
 <h3> Movie Search Results <h3>
 
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %><br>
 <% @movies.each do |movie| %>
   <%= link_to "Title: #{movie.title}", "/users/#{@user.id}/movies/#{movie.id}" %> </p>
   <p> Vote Average: <%= movie.vote %> </p>
 <% end %>
-
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
