--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -1,10 +1,11 @@
-<%= form_with model: @movie, url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
+<%= form_with url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
   <%= f.label :date %>
   <%= f.text_field :date %>
   <%= f.label :duration %>
   <%= f.text_field :duration %>
   <%= f.label :start_time %>
   <%= f.text_field :start_time %>
+
   <%= f.hidden_field :movie_id, value: @movie %>
   
   <% @users.each do |user| %>
@@ -13,3 +14,9 @@
 
   <%= f.submit %>
 <% end %>
+
+<p> 
+Movie: <%= @movie.details[:title] %> <br>
+Length: <%= @movie.details[:runtime] %> <br>
+Vote Average: <%= @movie.details[:vote_average] %> <br>
+</p>
