--- a/app/views/user_viewing_parties/new.html.erb
+++ b/app/views/user_viewing_parties/new.html.erb
@@ -1,5 +1,14 @@
 <h3><%= @movie.title %> Viewing Party </h3>
 
-<%= form_with model: @viewing_party, method: :post, url: user_path(@user), local: true do |form|  %>
+<%= form_with  url: user_path(@user), method: :post, local: true do |form|  %>
+  <%= form.hidden_field :movie_id, value: @movie.id %>
   <%= form.label "Duration of Party" %>
-  <%= form.number_field :duration, value: @movie.runtime %>
+  <%= form.number_field :duration, value: @movie.runtime %><br>
+  <%= form.label "When" %>
+  <%= form.date_select :day %><br>
+  <%= form.label "Start Time" %>
+  <%= form.time_select :start_time %><br>
+  <%= form.label "Invitees" %>
+  <%= form.collection_check_boxes :invitees, User.all, :id, :name %><br>
+  <%= form.submit %>
+<% end %>
