--- a/app/views/user_viewing_parties/new.html.erb
+++ b/app/views/user_viewing_parties/new.html.erb
@@ -2,13 +2,13 @@
 
 <%= form_with  url: user_path(@user), method: :post, local: true do |form|  %>
   <%= form.hidden_field :movie_id, value: @movie.id %>
-  <%= form.label "Duration of Party" %>
-  <%= form.number_field :duration, value: @movie.runtime %><br>
-  <%= form.label "When" %>
-  <%= form.date_select :day %><br>
-  <%= form.label "Start Time" %>
-  <%= form.time_select :start_time %><br>
-  <%= form.label "Invitees" %>
-  <%= form.collection_check_boxes :invitees, User.all, :id, :name %><br>
+  <%= form.label "Duration of Party:" %>
+  <%= form.number_field :duration, value: @movie.runtime %><br><br>
+  <%= form.label "When:" %>
+  <%= form.date_select :day %><br><br>
+  <%= form.label "Start Time:" %>
+  <%= form.time_select :start_time %><br><br>
+  <%= form.label "Invitees:" %><br>
+  <%= form.collection_check_boxes :invitees, User.all, :id, :name %><br><br>
   <%= form.submit %>
 <% end %>
