add new viewing party form test

--- a/app/views/user_viewing_parties/new.html.erb
+++ b/app/views/user_viewing_parties/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with  url: user_path(@user), method: :post, local: true do |form|  %>
   <%= form.hidden_field :movie_id, value: @movie.id %>
-  <%= form.label "Duration of Party:" %>
+  <%= form.label "Duration of Party (in minutes):" %>
   <%= form.number_field :duration, value: @movie.runtime %><br><br>
   <%= form.label "When:" %>
   <%= form.date_select :day %><br><br>
