--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @movie.original_title %></h1>
+<h1><%= @movie.title %></h1>
 <p><%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %></p>
-<p><%= button_to "Create Viewing Party", new_user_movie_viewing_party_path(@user.id, @movie[:id]),  %></p>
+<p><%= button_to "Create Viewing Party", new_user_movie_viewing_party_path(@user.id, @movie.id), method: :get  %></p>
