--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.label :start_time %>
   <%= f.text_field :start_time %>
 
-  <%= f.hidden_field :movie_id, value: @movie %>
+  <%= f.hidden_field :movie_title, value: @movie %>
   
   <% @users.each do |user| %>
     <%= f.check_box :user%> <%= user.name %> <br>
@@ -19,4 +19,15 @@
 Movie: <%= @movie.details[:title] %> <br>
 Length: <%= @movie.details[:runtime] %> <br>
 Vote Average: <%= @movie.details[:vote_average] %> <br>
+Genre: <% @movie.details[:genres].each do |genre| %>
+  <%= genre[:name] %>,
+<% end %> <br>
+Summary: <%= @movie.details[:overview] %> <br>
+<ol>
+Cast: <% @actor.details.first(10).each do |actor| %>
+ <li> <%= actor.name %> </li>
+<% end %> <br>
+</ol>
+<br>Total Reviews: <%= %><br>
+Review info: <%= %><br>
 </p>
