--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<div id="header" >
-  <h3> <%= @user.name %>'s Dashboard</h3>
+<div style="text-align: center;">
+  <div id="header" >
+    <h3> <%= @user.name %>'s Dashboard</h3>
+  </div>
+  
+  <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %><br>
 </div>
-
-<h5>Viewing Parties</h5>
-
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %><br>
 
 <div id="hosted-parties">
   <% @user.hosted_parties.each do |party| %>
@@ -12,6 +12,14 @@
     <%= party.date.strftime('%B %-d, %Y') %><br>
     <%= party.start_time.strftime('%I:%M %p') %>
     <p>Host: <%= party.host_name %></p>
+    <div id="guests" >
+      <p>Guests:  </p>
+      <ul>
+        <% party.invited_users.each do |user| %>
+        <li><%= user.name %></li>
+        <% end %>
+      </ul><br><br>
+    </div>
   <% end %>
 </div>
 
@@ -21,6 +29,18 @@
     <%= party.date.strftime('%B %-d, %Y') %><br>
     <%= party.start_time.strftime('%I:%M %p') %>
     <p>Host: <%= party.host_name %></p>
+    <div id="invitees" >
+      <p>Guests:  </p>
+      <ul>
+        <% party.users.each do |user| %>
+          <% if user.id == @user.id %>
+            <li><strong> <%= user.name %> </strong></li>
+          <% else %>
+            <li><%= user.name %></li>
+          <% end %>
+        <% end %>
+      </ul><br><br>
+    </div>
   <% end %>
 </div>
 
