--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,11 @@
 <p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: "get" %> </p>
 
 <h4> List of Viewing Parties </h4>
+
+<h2><% @user.parties.each do |party| %></h2>
+  <p><%= party.movie_title %></p>
+  <img width='100px' src=<%= party.movie_image %>>
+    <p>Attendees<% party.attendees.each do |invite| %></p>
+      <p><%= invite.user_name %></p>
+    <% end %>
+<% end %>
