--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.label :start_time %>
   <%= f.text_field :start_time %>
 
-  <%= f.hidden_field :movie_title, value: @movie %>
+  <%= f.hidden_field :movie_title, value: @movie.details[:title] %>
   
   <% @users.each do |user| %>
     <%= f.check_box :user%> <%= user.name %> <br>
