--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,13 @@
   <div id="header" >
     <h3> <%= @user.name %>'s Dashboard</h3>
   </div>
-  
+
   <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %><br>
 </div>
 
 <div id="hosted-parties">
   <% @user.hosted_parties.each do |party| %>
+    <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
     <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
     <%= party.date.strftime('%B %-d, %Y') %><br>
     <%= party.start_time.strftime('%I:%M %p') %>
@@ -25,6 +26,7 @@
 
 <div id="invited-parties">
   <% @user.invited_to_parties.each do |party| %>
+    <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
     <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
     <%= party.date.strftime('%B %-d, %Y') %><br>
     <%= party.start_time.strftime('%I:%M %p') %>
