--- a/app/views/watch_parties/new.html.erb
+++ b/app/views/watch_parties/new.html.erb
@@ -1,16 +1,15 @@
 <%= form_with url: "/users/#{@user.id}", local: true, method: :post  do |f| %>
   <%= f.label :date %>
-  <%= f.text_field :date %>
+  <%= f.date_field :date %>
+
   <%= f.label :duration %>
-  <%= f.text_field :duration %>
+  <%= f.number_field :duration, value: @movie.details[:runtime], min: @movie.details[:runtime] %>
+
   <%= f.label :start_time %>
-  <%= f.text_field :start_time %>
+  <%= f.time_field :start_time %>
 
   <%= f.hidden_field :movie_title, value: @movie.details[:title] %>
-  
-  <% @users.each do |user| %>
-    <%= f.check_box :user%> <%= user.name %> <br>
-  <% end %>
+  <%= f.collection_check_boxes :user, User.all, :id, :name %>
 
   <%= f.submit %>
 <% end %>
