--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,14 @@
-<h2>New User Registration</h2>
+<h2>Register a New User</h2>
 
 <div id="user-registration">
   <%= form_with url: users_path, method: :post, local: true do |form| %>
-    <%= form.label :name, "Name" %>
+    <%= form.label :name, "Name: " %>
     <%= form.text_field :name %>
-      <br>
-    <%= form.label :email, "Email" %>
+    <br>
+    <%= form.label :email, "Email: " %>
     <%= form.text_field :email %>
-      <br>
-    <%= form.submit "Register User" %>
+    <br>
+    <br>
+    <%= form.submit "Create New User" %>
   <% end %>
 </div>
