--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,13 @@
+<div id="query-type">
+  <h3>
+    <% if @facade.commit == "Find Movies"%>
+      <%= "Movie Results for: \"#{@facade.title}\"" %>
+    <% else %>
+      <%= "Top Rated Movies" %>
+    <% end %>
+  </h3>
+<div>
+
 <%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
 
 <section id="requested-movies">
