--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,8 +1,10 @@
 <h2 id="title"><%= @facade.movie_title %></h2>
 
-<%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
-
-<%= button_to "Create Viewing Party for #{@facade.movie_title}", new_user_movie_viewing_party_path(@facade.user_id, @facade.movie_id), method: :get %>
+<section id="buttons">
+  <%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
+  <br>
+  <%= button_to "Create Viewing Party for #{@facade.movie_title}", new_user_movie_viewing_party_path(@facade.user_id, @facade.movie_id), method: :get %>
+</section>
 
 <section id="movie-details">
   <p><%= "Vote: #{@facade.movie_rating}" %></p>
