--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -5,13 +5,13 @@
 <h4>Viewing Party Details</h4>
 <div class="party_details">
   <p>Movie Title: <%= @movie.title %></p>
-    <%= form.with url: new_user_movie_viewing_party_path(@user, @movie.id), local: true do |f| %>
+    <%= form_with url: user_movie_viewing_parties_path(@user, @movie.id), local: true do |f| %>
       <%= f.label :duration, "Duration of Party" %>
       <%= f.number_field :duration, value: @movie.runtime, min: @movie.runtime, max: 300 %></br>
-      <%= f.label :date, "Day" %>
-      <%= f.date_field :date %></br>
-      <%= f.label :start_time %>
-      <%= f.time_field :start_time %></br>
+      <%= f.label :party_date, "Day" %>
+      <%= f.date_field :party_date %></br>
+      <%= f.label :party_time %>
+      <%= f.time_field :party_time %></br>
       <h4>Invite Other Users</h4>
       <%= f.label :check_boxes, "Invite Users" %>
       <%= f.collection_check_boxes :user_ids, @users, :id, :name %>
