--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -5,7 +5,7 @@
 <%= button_to 'Discover Top Rated Movies', movies_path, method: :get %>
 <br>
 <h3>Search by Movie Title</h3>
-<%= form_with url: search_path, method: :post do |f| %>
+<%= form_with url: search_path(@user), method: :post do |f| %>
   <%= f.hidden_field :user_id, value: @user.id %>
   <%= f.label :search, "Search by Movie Title" %>
   <%= f.text_field :search %>
