--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Movie Detail Page</h1>
 
 <%= button_to 'Discover Page', discover_path(@user), method: :get %>
-<%= button_to 'Create Viewing Party' %>
+<%= button_to 'Create Viewing Party', new_viewing_party_path(@user, @movie.id), method: :get  %>
 
 
 <p>Title: <%= @movie.title %></p>
