change size and color of header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "Home", root_path %>
     </div>
     <div id="title" style="text-align: center;">
-      <h1>Viewing Party</h1>
+      <h1 style="font-size: 52px; color: darkblue;">Viewing Party</h1>
     </div>
     <% flash.each do |type, message| %>
       <p><%= message %></p>
