add black line dividers to view

--- a/app/views/users/movies/show.html.erb
+++ b/app/views/users/movies/show.html.erb
@@ -12,6 +12,8 @@
   </div>
 </div>
 
+<hr color="black" size="3"><br>
+
 <div style="text-align: left;">
   <div id="movie-info">
     <p><strong>Summary:</strong></p>
