--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,42 +8,48 @@
 
 <hr color="black" size="3"><br>
 
-<div id="hosted-parties">
+<div id="hosted-parties" style="display: flex;">
   <% @user.hosted_parties.each do |party| %>
-    <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
-    <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
-    <%= party.date.strftime('%B %-d, %Y') %><br>
-    <%= party.start_time.strftime('%I:%M %p') %>
-    <p>Host: <%= party.host_name %></p>
-    <div id="guests" >
-      <p>Guests:  </p>
-      <ul>
-        <% party.invited_users.each do |user| %>
-        <li><%= user.name %></li>
-        <% end %>
-      </ul><br><br>
+    <div style="flex: 1; margin-right: 10px;">
+      <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
+      <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
+      <%= party.date.strftime('%B %-d, %Y') %><br>
+      <%= party.start_time.strftime('%I:%M %p') %>
+      <p>Host: <%= party.host_name %></p>
+      <div id="guests" >
+        <p>Guests:  </p>
+        <ul>
+          <% party.invited_users.each do |user| %>
+          <li><%= user.name %></li>
+          <% end %>
+        </ul><br>
+      </div>
     </div>
   <% end %>
 </div>
 
-<div id="invited-parties">
+<hr color="black" size="3"><br>
+
+<div id="invited-parties" style="display: flex;">
   <% @user.invited_to_parties.each do |party| %>
-    <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
-    <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
-    <%= party.date.strftime('%B %-d, %Y') %><br>
-    <%= party.start_time.strftime('%I:%M %p') %>
-    <p>Host: <%= party.host_name %></p>
-    <div id="invitees" >
-      <p>Guests:  </p>
-      <ul>
-        <% party.users.each do |user| %>
-          <% if user.id == @user.id %>
-            <li><strong> <%= user.name %> </strong></li>
-          <% else %>
-            <li><%= user.name %></li>
+    <div style="flex: 1; margin-right: 10px;">
+      <img src=<%= "https://image.tmdb.org/t/p/w500#{party.poster(party.movie_id)}" %> alt="poster", width="200", height="auto" ><br>
+      <%= link_to party.movie_title(party.movie_id), user_movie_path(party.host_id, party.movie_id) %><br>
+      <%= party.date.strftime('%B %-d, %Y') %><br>
+      <%= party.start_time.strftime('%I:%M %p') %>
+      <p>Host: <%= party.host_name %></p>
+      <div id="invitees" >
+        <p>Guests:  </p>
+        <ul>
+          <% party.users.each do |user| %>
+            <% if user.id == @user.id %>
+              <li><strong> <%= user.name %> </strong></li>
+            <% else %>
+              <li><%= user.name %></li>
+            <% end %>
           <% end %>
-        <% end %>
-      </ul><br><br>
+        </ul><br>
+      </div>
     </div>
   <% end %>
 </div>
