Come back to this

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
 <h2><center><%= @user.name %>'s Dashboard</h2>
 <%= button_to 'Discover Movies', "/users/#{@user.id}/discover", method: :get %>
+<div style="border: solid black;"><%= img_tag poster %></div>
+
+
+<div style="border: solid black;"></div>
