--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,12 +1,12 @@
-<div id="existing-users">
-  <h3>Existing Users</h3>
-  <ul>
+<div style="text-align: center;">
+  <div id="existing-users">
+    <h1>Existing Users</h1>
     <% @users.each do |user| %>
-      <li><%= link_to "#{user.name}", "/users/#{user.id}" %></li>
+      <p><%= link_to "#{user.name}", "/users/#{user.id}" %></p>
     <% end %>
-  </ul>
-<div><br>
+  <div><br>
 
-<div id="create-user">
-  <%= button_to "Create User", "/register", method: :get %>
+  <div id="create-user">
+    <%= button_to "Create User", "/register", method: :get %>
+  </div>
 </div>
