--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<h3>Register New User</h3>
+<h1>Register New User</h1>
 
 <%= form_with model: @user, url: users_path(@user), data: {turbo: false }, local: true do |form| %>
   <%= form.label :name %>
-  <%= form.text_field :name %><br>
+  <%= form.text_field :name %><br><br>
   <%= form.label :email %>
-  <%= form.text_field :email %><br>
+  <%= form.text_field :email %><br><br>
   <%= form.submit 'Create' %>
 <% end %>
 
