--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,26 @@
 <h1><%= @user.name %>'s Dashboard </h1>
 <p><%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %></p>
-
+</br>
+<h1>Available Viewing Parties</h1>
+</br>
 <div id=parties>
-  <h3>Available Viewing Parties</h3>
+  <h3>Viewing Party Invites</h3>
+  <li>Image</li>
+  <li>Movie Title: <%= link_to @movie.title, user_movie_path(@user.id, @movie.id) %></li>
+  <% @viewing_parties.each do |party|%>
+  <li>Date & Time: <%= party.date_time %></li>
+  <li>Party Host: <%= @host.name %></li>
+  <% end %>
+  <% @viewing_users.each do |user| %></li>
+  <li>Party Guest Invitees: </li>
+  <% end %>
+  </br>
+  <h3>Viewing Parties as Host</h3>
+  <li>"/coverage/assets/0.12.3/images/</li>
+  <li>Movie Title: <%= link_to @movie.title, user_movie_path(@user.id, @movie.id) %></li>
+  <% @viewing_parties.each do |party|%>
+  <li>Date & Time: <%= party.date_time %></li>
+  <li>Party Host: <%= @user.name %></li>
+  <ul><% end %>
+  <li>Party Guest Invitees: </li>
 </div>
