--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
 <h2><%= @user.name %>'s Dashboard</h2>
 
 <%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %>
+
+<div class="invited_to_parties">
+  <% @user.invitations.each do |party|%>
+    <p><%= party.movie_details[:title] %></p>
+    <p>Invited</p>
+  <% end %>
+</div>
+
+<div class="hosting_parties">
+  <% @user.parties_hosting.each do |party| %>
+    <p><%= party.movie_details[:title] %></p>
+    <p>Hosting</p>
+  <% end %>
+</div>
