--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,3 +5,9 @@
 <%= button_to "Discover Movies", discover_path(@user.id), method: :get %>
 
 <h3>Viewing Parties</h3>
+
+<% @user.parties.each do |p| %>
+  <p><%= p.date %></p>
+  <p><%= p.time.strftime('%A, %B %e, %Y') %></p>
+
+<% end %>
