--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -2,13 +2,14 @@
 
 <h3><%= @movie.title %></h3>
 
-<%= form_with url: create_viewing_party_path(@user, @movie), method: :post do |f| %>
+<%= form_with url: create_viewing_party_path(@user, @movie.id), method: :post do |f| %>
   <%= f.label :duration, "Duration of Viewing Party in Minutes" %>
   <%= f.number_field :duration, value: @movie.runtime, min: @movie.runtime %><br><br>
+  <%= f.hidden_field :movie_id, value: @movie.id %>
   <%= f.label :date, "When is the viewing party" %>
   <%= f.date_field :date %><br><br>
-  <%= f.label :start_time, "Start Time" %>
-  <%= f.time_field :start_time %><br><br>
+  <%= f.label :time, "Start Time" %>
+  <%= f.time_field :time %><br><br>
   <div>
     <% @users.each do |u| %>
       <%= f.label :users, "#{u.name}" %>
