update to allow testing user creation authenticate

--- a/app/views/users/register/index.html.erb
+++ b/app/views/users/register/index.html.erb
@@ -6,5 +6,9 @@
 
   <%= f.label  :email %>
   <%= f.text_field :email %>
+
+  <%= f.label  :password %>
+  <%= f.text_field :password %>
+  
   <%= f.submit "Register" %>
 <% end %>
