--- a/app/views/users/register/index.html.erb
+++ b/app/views/users/register/index.html.erb
@@ -9,6 +9,9 @@
 
   <%= f.label  :password %>
   <%= f.text_field :password %>
+
+  <%= f.label  :password_confirmation %>
+  <%= f.text_field :password_confirmation %>
   
   <%= f.submit "Register" %>
 <% end %>
