Feat: Update exisitng views for passwords and update gemfile with Bcrypt

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-  <%= link_to "Home", root_path %>
-  <h1><center>Viewing Party</h1>
+  <%= link_to "Home", root_path, style: "font-size:25px;" %>
+  <h1 style="font-size:80px;"><center>Viewing Party</h1>
   <div class="container">
         <% flash.each do |type, notice| %>
           <h5 class="text-info"><b><%= notice %></b></h5>
