--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -1,7 +1,7 @@
-<%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies", method: :get %>
-
+<center><%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies", method: :get %>
+<br />
 <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form|  %>
-  <%= form.label :search_field %>
+  <%= form.label "Search Movie by Title" %>
   <%= form.text_field :search_field %>
   <%= form.submit "Search" %>
-<% end %>
+<% end %></center>
