--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,10 @@
   <%= form.text_field :name %>
   <%= form.label :email %>
   <%= form.text_field :email %>
+  <%= form.label :password %>
+  <%= form.password_field :password %>
+  <%= form.label :password_confirmation %>
+  <%= form.password_field :password_confirmation %>
+
   <%= form.submit "Register" %>
 <% end %>
