--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,17 @@
   <body>
     <div id="nav-bar">
       <%= link_to "Home", root_path %>
+      <%= link_to "Log In", login_path %>
     </div>
+
     <div id="title" style="text-align: center;">
       <h1 style="font-size: 52px; color: darkblue;">Viewing Party</h1>
     </div>
+
     <% flash.each do |type, message| %>
       <p><%= message %></p>
     <% end %>
+
     <%= yield %>
   </body>
 </html>
