--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,21 @@
-<%= form_with model: @user, method: :post, url: users_path, local: true do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name %>
-  <%= form.label :email %>
-  <%= form.text_field :email %>
-  <%= form.submit %>
+<%#= form_with model: @user, method: :post, url: users_path, local: true do |form| %>
+  <%#= form.label :name %>
+  <%#= form.text_field :name %>
+  <%#= form.label :email %>
+  <%#= form.text_field :email %>
+  <%#= form.submit %>
+<%# end %>
+
+<%= form_with model: @user do |f| %>
+<%= f.label :name, "Name:" %>
+<%= f.text_field :name %>
+<%= f.label :email %>
+<%= f.text_field :email %>
+
+<%= f.label :password, "Password" %>
+<%= f.password_field :password %>
+<%= f.label :password_confirmation, "Password Confirmation" %>
+<%= f.password_field :password_confirmation %>
+
+<%= f.submit 'Create User' %>
 <% end %>
