--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 
+<center><%= link_to "I already have an account", login_path %>
 <center><%= button_to "Create New User", register_path, method: :get, style: "font-size:20px;" %>
 
 <h3 style="background-color:lightgrey; padding:20px; font-size:40px;">Existing Users</h3>
