Add some line breaks to view on the form to finish US2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <% flash.each do |type, msg| %>
-    <div id="flash-message">
+    <div id="flash-message"><br>
       <%= msg %>
     </div>
   <% end %>
