--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,17 +5,17 @@
   <%#= form.text_field :email %>
   <%#= form.submit %>
 <%# end %>
-
+<br>
 <%= form_with model: @user do |f| %>
 <%= f.label :name, "Name:" %>
-<%= f.text_field :name %>
+<%= f.text_field :name %><br>
 <%= f.label :email %>
-<%= f.text_field :email %>
+<%= f.text_field :email %><br>
 
 <%= f.label :password, "Password" %>
-<%= f.password_field :password %>
+<%= f.password_field :password %><br>
 <%= f.label :password_confirmation, "Password Confirmation" %>
-<%= f.password_field :password_confirmation %>
+<%= f.password_field :password_confirmation %><br><br>
 
 <%= f.submit 'Create User' %>
 <% end %>
