--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,10 @@
   <%= form.text_field :user_name %><br>
   <%= form.label :email %>
   <%= form.text_field :email %><br>
+  <%= form.label :password, 'Password:' %>
+  <%= form.password_field :password %>
+  <%= form.label :password_confirmation, 'Password Confirmation:' %>
+  <%= form.password_field :password_confirmation %>
   <%= form.submit "Create New User" %>
 <% end %>
 </section>
