add sad path to user_register page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h3> New User Registration Form </h3>
-<%= form_with(model: @user, url: users_path, method: :post, data: { turbo: false }) do |f| %>
+<%= form_with(url: register_user_path, method: :post, data: { turbo: false }) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
