--- a/app/views/application/landing.html.erb
+++ b/app/views/application/landing.html.erb
@@ -1,5 +1,6 @@
 <div id="title">
   <h1> Movie Viewing Party! </h1>
+  <p>Existing Customers Login Here: <%=  link_to "Login", login_path %></p>
   <p><%=  button_to "Create New User", new_user_path, method: :get %></p>
   <p><%=  link_to "Return to Movie Viewing Party Landing Page" %></p>
 </div>
