--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,4 +1,5 @@
-<h1> New User Registration </h1>
+<h1> Login Page </h1>
+
 
 <%= form_with url: users_path, method: :post, data: {turbo: false}, local: true do |f|%>
   <%= f.label  :email %>
@@ -13,5 +14,5 @@
   <%= f.label  :password_confirmation %>
   <%= f.text_field :password_confirmation %>
   
-  <%= f.submit "Register" %>
+  <%= f.submit "Login" %>
 <% end %>
