Add route to change name to login_user and addlogic to login_user action with authenticate method and session

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,7 +1,7 @@
 <h1> Viewing Party Lite 7 </h1>
 
+<%= button_to "Log In", login_path, method: :get %><br>
 <%= button_to "Register a New User", "/register", method: :get %> 
-<%= button_to "Log In", login_path, method: :get %>
 <h4> Existing Users </h4>
   <ul>
     <% @users.each do |user| %>
