--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_with url: login_path, method: :post do |form| %>
   <%= form.label :email, "Email:" %>
-  <%= form.text_field :email %>
+  <%= form.text_field :email %><br>
   
   <%= form.label :password, "Password:" %>
-  <%= form.text_field :password %>
+  <%= form.text_field :password %><br><br>
 
   <%= form.submit "Log In" %>
 <% end %>
