--- a/app/views/register/index.html.erb
+++ b/app/views/register/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Viewing Party</h1>
-<%= form_with model: @user do |form| %>
+<%= form_with url: "/users", method: :post do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name %>
 
