--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,14 @@
   <%= form.label :name %>
   <%= form.text_field :name %>
 
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+  <%= form.label :email %>
+  <%= form.text_field :email %>
 
-    <%= form.submit "Register User" %>
+  <%= form.label :password, "Password:" %>
+  <%= form.password_field :password %>
+
+  <%= form.label :password_confirmation, "Password Confirmation:" %>
+  <%= form.password_field :password_confirmation %>
+
+  <%= form.submit "Create User" %>
 <% end %>
