--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Viewing Party</h1>
 
-<%= button_to 'Create a New User', new_user_path, method: :get %>
+<%= link_to "Register a New User", new_user_path %>
+<%= link_to "Log In", login_path %>
 
 
 <h2>Existing Users</h2>
