--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,18 +1,11 @@
 <h1> Login Page </h1>
 
-
-<%= form_with url: users_path, method: :post, data: {turbo: false}, local: true do |f|%>
+<%= form_with url: login_path, method: :post, data: {turbo: false}, local: true do |f|%>
   <%= f.label  :email %>
   <%= f.text_field :email %>
-  
-  <%= f.label  :name %>
-  <%= f.text_field :name %>
 
   <%= f.label  :password %>
   <%= f.text_field :password %>
 
-  <%= f.label  :password_confirmation %>
-  <%= f.text_field :password_confirmation %>
-  
   <%= f.submit "Login" %>
 <% end %>
