--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,12 +1,14 @@
 <div style="text-align: center;">
-  <div id="existing-users">
-    <h1>Existing Users</h1>
-    <% @users.each do |user| %>
-      <p><%= link_to "#{user.name}", "/users/#{user.id}" %></p>
-    <% end %>
-  <div><br>
-
-  <div id="create-user">
-    <%= button_to "Create User", "/register", method: :get %>
-  </div>
+  <% if current_user %>
+    <div id="existing-users">
+      <h1>Existing Users</h1>
+      <% @users.each do |user| %>
+        <p><%= link_to "#{user.name}", "/users/#{user.id}" %></p>
+      <% end %>
+    <div><br>
+  <% else %>
+    <div id="create-user">
+      <%= button_to "Create User", "/register", method: :get %>
+    </div>
+  <% end %>
 </div>
