--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   <body>
     <div id="nav-bar">
       <%= link_to "Home", root_path %>
-      <%= link_to "Log In", login_path %>
+      <% if current_user %>
+        <%= link_to "Log Out", logout_path, method: :delete %>
+      <% else %>
+        <%= link_to "Log In", login_path, method: :get %>
+      <% end %>
     </div>
 
     <div id="title" style="text-align: center;">
