--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,9 @@
 <div style="text-align: center;">
   <% if current_user %>
-    <div id="existing-users">
-      <h1>Existing Users</h1>
-      <% @users.each do |user| %>
-        <p><%= link_to "#{user.name}", "/users/#{user.id}" %></p>
-      <% end %>
-    <div><br>
+    <h1>Existing Users</h1>
+    <% @users.each do |user| %>
+      <p><%= user.email %></p>
+    <% end %><br>
   <% else %>
     <div id="create-user">
       <%= button_to "Create User", "/register", method: :get %>
