--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
   <body>
     <div id="nav-bar">
-      <%= link_to "Home", root_path %>
+      <%= link_to "Home", root_path %><br>
       <% if current_user %>
+        <%= link_to "Dashboard", user_path(current_user) %><br>
         <%= link_to "Log Out", logout_path, method: :delete %>
       <% else %>
         <%= link_to "Log In", login_path, method: :get %>
