Add test to home spec to test that log out link is on home page when current user signed in and logic to view page to check if current user

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,7 +1,12 @@
 <h1> Viewing Party Lite 7 </h1>
 
+<% if current_user %>
+  <%= link_to "Log Out" %>
+<% else %>
+
 <%= button_to "Log In", login_path, method: :get %><br>
 <%= button_to "Register a New User", "/register", method: :get %> 
+<% end %>
 <h4> Existing Users </h4>
   <ul>
     <% @users.each do |user| %>
