--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,17 @@
 <h1>Viewing Party</h1>
 
-<%= link_to "Register a New User", new_user_path %>
-<%= link_to "Log In", login_path %>
+<% if session[:user_id] %>
+  <%= link_to "Log Out", logout_path %>
+<% else %>
+  <%= link_to "Register a New User", new_user_path %>
+  <%= link_to "Log In", login_path %>
+<% end %>
 
-
-<h2>Existing Users</h2>
-<% @users.each do |user| %>
-<ul>
-  <li id="user_<%= user.id %>"><%= link_to user.email, "/users/#{user.id}" %></li>
-</ul>
+<% if session[:user_id] %>
+  <h2>Existing Users</h2>
+  <% @users.each do |user| %>
+  <ul>
+    <li id="user_<%= user.id %>"><%= user.email %></li>
+  </ul>
+  <% end %>
 <% end %>
