Add unrestful route for delete action for log out button

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,7 +1,7 @@
 <h1> Viewing Party Lite 7 </h1>
 
 <% if current_user %>
-  <%= link_to "Log Out" %>
+  <%= button_to "Log Out", login_path, method: :delete %>
 <% else %>
 
 <%= button_to "Log In", login_path, method: :get %><br>
