Add updated tests and render only email names on home page of registered user

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -5,7 +5,7 @@
   <h4> Existing Users </h4>
   <ul>
     <% @users.each do |user| %>
-      <li><%= user.name %></li>
+      <li><%= user.email %></li>
   <% end %>
   </ul>
 <% else %>
