--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,18 @@
 <h2>Register a New User</h2>
 
 <div id="user-registration">
-  <%= form_with url: users_path, method: :post, local: true do |form| %>
+  <%= form_with model: @user, url: users_path, local: true do |form| %>
     <%= form.label :name, "Name: " %>
     <%= form.text_field :name %>
     <br>
     <%= form.label :email, "Email: " %>
     <%= form.text_field :email %>
     <br>
+    <%= form.label :password, "Password: " %>
+    <%= form.password_field :password %>
+    <br>
+    <%= form.label :password_confirmation, "Confirm Password: " %>
+    <%= form.password_field :password_confirmation %>
     <br>
     <%= form.submit "Create New User" %>
   <% end %>
