--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,11 @@
-<%= button_to "Create a New User", "/register", method: :get %>
+<div id=login>
+  <%= button_to "Log In", "/login", method: :get %>
+</div>
+<br>
+
+<div id=register>
+  <%= button_to "Create a New User", "/register", method: :get %>
+</div>
 <br>
 
 <div id="existing-users">
