--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,20 @@
-<div id=login>
-  <%= button_to "Log In", "/login", method: :get %>
+<div id=buttons>
+  <% unless session[:user_id] %>
+    <%= button_to "Log In", "/login", method: :get %>
+    <br>
+    <%= button_to "Create a New User", "/register", method: :get %>
+    <br>
+  <% else %>
+    <%= button_to "Log Out", "/logout", method: :delete %>
+    <br>
+  <% end %>
 </div>
-<br>
-
-<div id=register>
-  <%= button_to "Create a New User", "/register", method: :get %>
-</div>
-<br>
 
 <div id="existing-users">
-  <h3> Existing Users </h3>
-  <% @users.each do |user| %>
-    <li><%= link_to "#{user.email}", user_path(user.id) %></li>
+  <% if session[:user_id] %>
+    <h3> Existing Users </h3>
+    <% @users.each do |user| %>
+      <li><%= user.email %></li>
+    <% end %>
   <% end %>
 </div>
