Update new spec so user must log in after being created and click my dashboard

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -2,6 +2,8 @@
 
 <% if current_user %>
   <%= button_to "Log Out", login_path, method: :delete %>
+  <%= button_to  "My Dashboard", dashboard_path, method: :get %> 
+
   <h4> Existing Users </h4>
   <ul>
     <% @users.each do |user| %>
@@ -11,5 +13,6 @@
 <% else %>
 
 <%= button_to "Log In", login_path, method: :get %><br>
-<%= button_to "Register a New User", "/register", method: :get %> 
+<%= button_to "Register a New User", "/register", method: :get %><br>
+<%#= button_to  "My Dashboard", dashboard_path, method: :get %> 
 <% end %>
