--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @movie.title %></h1>
+<h1><%=@movie.title%></h1>
 <p><%= button_to "Discover Movies", movies_path, method: :get %></p>
-<p><%= button_to "Create Viewing Party", new_viewing_party_path, method: :get  %></p>
+<p><%= button_to "Create Viewing Party", new_movie_viewing_party_path(@movie.id), method: :get  %></p>
