--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,12 +1,14 @@
-<section style="text-align:center">
-<%= button_to "Create a New User", register_path, method: :get, local: true %>
-</section>
+<p> <%= button_to "Discover Movies", discover_index_path, method: :get %> </p>
 
-<%= link_to "Log In", login_path %>
-
-<ul>
-  <h2>Existing Users</h2>
+<% if current_user %>
+  <%= link_to "Log Out", logout_path %>
+    <h2>Existing Users</h2>
     <% @users.each do |user| %>
-      <li><%= link_to user.email, user_path(user), method: :get, local: true %></li>
+      <ul>
+        <li><%= user.email %></li>
+      </ul>
     <% end %>
-</ul>
+<% else %>
+    <%= link_to "Create User", register_path, method: :get, local: true %>
+    <%= link_to "Log In", login_path %>
+<% end %>
