--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
-<p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %> </p>
-<p> <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new", method: :get %> </p>
+<p> <%= button_to "Discover Movies", discover_index_path, method: :get %> </p>
+<p> <%= button_to "Create Viewing Party", new_movie_viewing_party_path(params[:id]), method: :get %> </p>
 
 <h1>Movie Title:</h1>
 <%= @movie.title %> <br>
@@ -12,7 +12,7 @@
 
 <h3>Movie Genres:</h3>
 <% @movie.genres.each do |genre| %>
-  <%= genre[:name] %> 
+  <%= genre[:name] %>
   <% end %> <br>
 
 <h3>Movie Summary:</h3>
