--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<h3> <%= "#{@user.user_name}'s Dashboard" %> </h3>
+<h3> <%= "#{current_user.user_name}'s Dashboard" %> </h3>
 
-<p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: "get" %> </p>
+<p> <%= button_to "Discover Movies", discover_index_path, method: "get" %> </p>
 
 <h4> List of Viewing Parties </h4>
 
-<h2><% @user.parties.each do |party| %></h2>
+<h2><% current_user.parties.each do |party| %></h2>
   <p>Movie Title: <%= party.movie_title %></p>
   <p>Party Host: <%= party.host %></p>
   <img width='100px' src=<%= party.movie_image %>>
