--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<br><%= link_to "Movie Discover Page", "/users/#{@user.id}/discover", method: :get %>
+<br><%= link_to "Movie Discover Page", user_discover_path(@user), method: :get %>
 <h2> Movies watched </h2>
 
 <h2> Top Rated Movies </h2>
