add welcome page, routes, factoy bot, rubocop updates
Co-authored-by: Kaina Cockett <kainacockett@gmail.com>

Co-authored-by: Derek Chavez <dmchavez1824@yahoo.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <h1>Viewing Party</h1>
+    <nav>
+      <%= link_to "Home", "/" %>
+    </nav>
     <%= yield %>
   </body>
 </html>
