--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,15 @@
+<h1><%= @user.name %>'s Dashboard</h1>
 <h1>Welcome, <%= @user.name %>!</h1>
 <p>Email: <%= @user.email %></p>
+
+<section>
+  <ul>
+    <li>
+      <p> <%= button_to "Discover"  %></p>
+    </li>
+  </ul>
+</section>
+
+<div id="viewing">
+<h2>Viewing Parties</h2>
+</div>
