--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.name %>'s Dashboard</h1>
-<h1>Welcome, <%= @user.name %>!</h1>
+<h1>Welcome, <%= @user.name %></h1>
 <p>Email: <%= @user.email %></p>
 
 <section>
