--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 <section>
   <ul>
     <li>
-      <p> <%= button_to "Discover"  %></p>
+      <p> <%= button_to "Discover Movies", user_discover_index_path, method: :get  %></p>
     </li>
   </ul>
 </section>
