--- a/app/views/register/new.html.erb
+++ b/app/views/register/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @user, url: register_index_path, local: true) do |form| %>
+<%= form_with(model: @user, url: users_path, method: :post, local: true) do |form| %>
   <div>
     <%= form.label :name %>
     <%= form.text_field :name %>
