refactor username to name
Co-authored-by: Kaina Cockett <kainacockett@gmail.com>

Co-authored-by: Derek Chavez <dmchavez1824@yahoo.com>

--- a/app/views/register/index.html.erb
+++ b/app/views/register/index.html.erb
@@ -1,6 +1,6 @@
 <%= form_with id:"registration_form", model: @user, local: true do |form| %>
-  <%= form.label :username %>
-  <%= form.text_field :username %>
+  <%= form.label :name %>
+  <%= form.text_field :name %>
   
   <%= form.label :email %>
   <%= form.text_field :email %>
