--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_with id:"registration_form", model: @user, local: true do |form| %>
-  <%= form.label :username %>
-  <%= form.text_field :username %>
+  <%= form.label :name %>
+  <%= form.text_field :name %>
   
   <%= form.label :email %>
   <%= form.text_field :email %>
