--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @user.name %>'s Dashboard</h3>
 
-<%= button_to "Discover Movies", href: "/users/#{@user.id}/discover" %>
+<%= button_to "Discover Movies", user_discover_path(@user), method: :get %>
 
 <div id="my_parties">
 <h5>My Parties</h5>
