feat: add viewing parties section to view, still empty until api consumption

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,7 @@
 <div id='discover_movies'>
   <%= button_to "Discover Movies", discover_path(@user.id), method: :get %>
 </div>
+<br>
+<div id='viewing_parties'>
+
+</div>
