fix: change `new_user_path` to `register_path`

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div id="new-user-button">
-  <%= button_to "Create a New User", new_user_path, method: :get %>
+  <%= button_to "Create a New User", register_path, method: :get %>
 </div>  
 <section id="user-list">
   <h3>Existing Users</h3>
