feat: Create landing page for app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <h1>Viewing Party </h1>
+    <p><%= link_to 'Home', root_path %></p>
     <%= yield %>
   </body>
 </html>
