refactor: Path for new user to be /register

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,4 +7,4 @@
   <ul> <%= link_to "#{user.name}", user_path(user) %></ul>
 <% end %>
 
-<p><%= link_to 'New User', new_user_path %></p>
+<p><%= link_to 'New User', "/register" %></p>
