feat: flash logic in base view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+    <% end %>
     <%= link_to "Home", root_path %>
     <h1 id="header">Viewing Party</h1>
     <%= yield %>
